# exocortex-public-ontologies

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  _prefixes.yaml  ontologies.nt  ontologies.ttl  pyproject.toml  setup.cfg  xsd.rdf
.obsidian/: graph.json  workspace.json
03 Knowledge/: .gitignore  README.md
adms/: 01497151-811e-5722-937a-fe3d74e25016.md  02ebe458-b5c3-5f71-8c2c-c91fe29161ef.md  03ae09c4-fbae-52f1-a4ed-cb637b69162e.md  05a85559-9c03-5702-b128-5fe3330f2963.md  05ebd81a-608a-568c-bf91-668f5b975404.md  085fe2a7-0430-54b7-9583-e43e235deaca.md  087f06bd-355a-5a15-8275-aadb5390d6ca.md  0caf8f13-521b-5579-980d-5daf03094754.md  0f5f6375-9f19-52a8-a721-a19dcb85380a.md  0fe6c887-2c23-5bcd-8709-ebb5a26fc135.md  1175c7a7-f563-501b-91a0-23921140c678.md  1521c511-7324-550e-859d-17366a2b2f03.md  17680e1c-e6c1-5300-b2a1-3ba1036a29c1.md  187a2ed4-2417-59ad-861f-5dd9ac5b550b.md  18a89d9b-ea54-5953-a67c-1ac74a95d73c.md  198176f9-f2ba-5b62-91d7-963ed149a5b8.md  1c3adf2b-1359-533f-8ef8-fd60ca9cce63.md  1c7e7c87-8af7-51fc-8eec-688d29e41a41.md  21cadbd2-73de-5f8c-a616-1973791f501e.md  22848db9-0190-56a6-94a1-97fd6a7b5df3.md  22e35eb1-7685-5c55-b385-08e18f183b16.md  25dcba7d-2df9-586f-afea-5be4fed5a3bb.md  2699afb9-575e-52a8-9f93-3ed58685c6fb.md  2a0ba86a-45a4-5892-b723-96d62894a8be.md  2a1b81fa-09cb-5d64-8165-10a717bf54ac.md  2cc3d394-6ec4-5ea3-8eb8-f4f4955b34ac.md  2d638eee-0ab8-5fb8-ac0f-1ab5264c7f33.md  2d8da698-6033-5eb0-9ee3-ccdb0155f3a2.md  3269cb38-c1ea-5cfb-b58b-69be75db6629.md  32bb05f7-fa51-58b4-9d0c-54abc314b308.md  (+145 more)
dc/: !dc dcterms__modified ___.md  (+334 more)
(+53410 files in other folders)
